--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body {
 
 .green {
   background-color: white;
-  background-image: url(https://vectorshelf.com/wp-content/uploads/2023/11/ot413_1.png),
+  background-image: url(https://lh3.googleusercontent.com/pw/ABLVV84xI_2hlTKhfVqIanhxeAkRlRjtohxKji0uW0XL-A23SQlII2jd28t9UNlFgzL-8g25mukJIcp2zQdWAyQ4Ir5r3a1UHeTw9fnido7KTukfRjpAE8w=w2400),
     url(https://lh3.googleusercontent.com/pw/ABLVV87Kdt6xTvYPoqjrzDY4D5HZ91iz_6LflJuy5yv6i0YA-xGMHqdmlkXZQy7OPuHetMW0_Yu3_U-TfNHN_lboA3UM-V3rYhfeA8Rlt5mpZEEFMcmAdw=w2400);
   background-repeat: no-repeat;
   background-size: contain;
@@ -72,7 +72,7 @@ body {
 
 .blue {
   background-color: white;
-  background-image: url(https://vectorshelf.com/wp-content/uploads/2023/11/ot412_1.png),
+  background-image: url(https://lh3.googleusercontent.com/pw/ABLVV87V2mdWkEpF5IzfObGNk94TZSq2JY8pAhQELwnl6BK6Sewt38QPhoUWvrR5HC2KFd1PiPPBqzFv_yYc2oHKoAef0sbRDodoXpVLEIGABjKGs-_I7Q=w2400),
     url(https://lh3.googleusercontent.com/pw/ABLVV87Kdt6xTvYPoqjrzDY4D5HZ91iz_6LflJuy5yv6i0YA-xGMHqdmlkXZQy7OPuHetMW0_Yu3_U-TfNHN_lboA3UM-V3rYhfeA8Rlt5mpZEEFMcmAdw=w2400);
   background-repeat: no-repeat;
   background-size: contain;
@@ -85,7 +85,7 @@ body {
 
 .yellow {
   background-color: white;
-  background-image: url(https://vectorshelf.com/wp-content/uploads/2023/11/ot412_2.png),
+  background-image: url(https://lh3.googleusercontent.com/pw/ABLVV85qMrUOKVxDRrr3Lw_E9WcVkwV2Du4aa-xF7pi0RxB2jPomODP70lzfXyHHZ67hZosqN6MeFLK7s_Zc8nqgnLtzq-z5-P1HAsjtFu5-_d6cXCOOYA=w2400),
     url(https://lh3.googleusercontent.com/pw/ABLVV87Kdt6xTvYPoqjrzDY4D5HZ91iz_6LflJuy5yv6i0YA-xGMHqdmlkXZQy7OPuHetMW0_Yu3_U-TfNHN_lboA3UM-V3rYhfeA8Rlt5mpZEEFMcmAdw=w2400);
   background-repeat: no-repeat;
   background-size: contain;
@@ -98,7 +98,7 @@ body {
 
 .white {
   background-color: white;
-  background-image: url(https://vectorshelf.com/wp-content/uploads/2023/11/ot411.png),
+  background-image: url(https://lh3.googleusercontent.com/pw/ABLVV85DC6N9291NtcXxY3z1yCYqNTI6GKHKybmTOmISwRIimTYpaB2NCSNJzjS7sVBGiCvkAlAx9so19IKxIXdzaeJCSuYtGUKoPANjPBkU4vYLJbB1Yt0=w2400),
     url(https://lh3.googleusercontent.com/pw/ABLVV87Kdt6xTvYPoqjrzDY4D5HZ91iz_6LflJuy5yv6i0YA-xGMHqdmlkXZQy7OPuHetMW0_Yu3_U-TfNHN_lboA3UM-V3rYhfeA8Rlt5mpZEEFMcmAdw=w2400);
   background-repeat: no-repeat;
   background-size: contain;
@@ -111,7 +111,7 @@ body {
 
 .purple {
   background-color: white;
-  background-image: url(https://vectorshelf.com/wp-content/uploads/2023/11/ot414.png),
+  background-image: url(https://lh3.googleusercontent.com/pw/ABLVV84yJ9YzUpoTzx6mHID4X8zZMfX98OmnjTtN-OzJj3ikAs0Ak52L1YuWOeR96xKXlUi9Ajgf6Z5VsB_jHaI9t9J1JqYseLMykHYBBSZiUJmn887a2_g=w2400),
     url(https://lh3.googleusercontent.com/pw/ABLVV87Kdt6xTvYPoqjrzDY4D5HZ91iz_6LflJuy5yv6i0YA-xGMHqdmlkXZQy7OPuHetMW0_Yu3_U-TfNHN_lboA3UM-V3rYhfeA8Rlt5mpZEEFMcmAdw=w2400);
   background-repeat: no-repeat;
   background-size: contain;
@@ -124,7 +124,7 @@ body {
 
 .orange {
   background-color: white;
-  background-image: url(https://vectorshelf.com/wp-content/uploads/2023/11/ot415_4.png),
+  background-image: url(https://lh3.googleusercontent.com/pw/ABLVV84C2uQo8uhRp2ZNhSIv4kOHreAiDzIDHA1OT4oZJRdE3trpA6QHlfsn_iyJKmbDjeRHr5sIFZjK7wV3BYkTLtp_vmZWCwwMggtNJqtxs2aYo69L7E0=w2400),
     url(https://lh3.googleusercontent.com/pw/ABLVV87Kdt6xTvYPoqjrzDY4D5HZ91iz_6LflJuy5yv6i0YA-xGMHqdmlkXZQy7OPuHetMW0_Yu3_U-TfNHN_lboA3UM-V3rYhfeA8Rlt5mpZEEFMcmAdw=w2400);
   background-repeat: no-repeat;
   background-size: contain;
